--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -241,16 +241,17 @@
     display: block;
     color: inherit;
     padding: 0 0.5em 0.5em;
+    transition: background-color 0.35s ease;
 
     &::after {
       content: "";
       position: absolute;
       bottom: 0;
-      width: 100%;
+      width: 0;
       height: 2px;
       background-color: $c-light;
-      display: none;
-      left: 0;
+      right: 0;
+      transition: width 0.35s ease;
 
       @media (min-width: $stop-scaling) {
         left: -5px;
@@ -282,6 +283,9 @@
       outline: none;
 
       &::after {
+        width: 100%;
+        left: 0;
+        right: auto;
         opacity: 1;
         background-color: $c-purple;
       }
